Update to Django 1.3 static media handling

--- a/apps/main/templates/about.html
+++ b/apps/main/templates/about.html
@@ -9,7 +9,7 @@
     <h3 class="tc">
         {% project_name %} ({% trans "Version" %} {% app_version "main" %})<br /><br />
         <div class="tc">
-                <img src="{{ MEDIA_URL }}images/1011023_15459585_small.jpg"/>
+                <img src="{{ STATIC_URL }}images/1011023_15459585_small.jpg"/>
         </div>
 
         {% trans "Reminder application" %}<br /><br />
@@ -18,8 +18,8 @@
     </h3>
 
     <div class="tc">
-        <img src="{{ MEDIA_URL }}images/gplv3-127x51.png"/>
-        <img src="{{ MEDIA_URL }}images/djangopowered126x54.gif"/>
+        <img src="{{ STATIC_URL }}images/gplv3-127x51.png"/>
+        <img src="{{ STATIC_URL }}images/djangopowered126x54.gif"/>
     </div>
 </div>
 {% endblock %}
