--- a/apps/web_theme/templates/web_theme_login.html
+++ b/apps/web_theme/templates/web_theme_login.html
@@ -38,7 +38,7 @@
                             <input type="hidden" name="next" value="{{ next|escape }}" />
                             <div class="group navform wat-cf">
                             <button class="button" type="submit">
-                                <img src="{{ MEDIA_URL }}web_theme_media/images/icons/key.png" alt="Save" /> Login
+                                <img src="{{ STATIC_URL }}web_theme_media/images/icons/key.png" alt="Save" /> Login
                             </button>
                         </div>
                     </form>
