--- a/apps/common/templates/generic_confirm.html
+++ b/apps/common/templates/generic_confirm.html
@@ -25,7 +25,7 @@
                 {% endif %}          
                 
                 <div style="float: left; margin-right: 10px;">
-                    <img style="margin-top: 12px;" src="{{ MEDIA_URL }}images/icons/{{ form_icon|default:'question.png' }}" alt="{% trans 'form icon' %}" />
+                    <img style="margin-top: 12px;" src="{{ STATIC_URL }}images/icons/{{ form_icon|default:'question.png' }}" alt="{% trans 'form icon' %}" />
                 </div>                
                 <div style="float: left; width: 90%;">
                 {% if title %}
@@ -43,11 +43,11 @@
 
                 <div class="group navform wat-cf">        
                   <button class="button" type="submit">
-                    <img src="{{ MEDIA_URL }}web_theme_media/images/icons/tick.png" alt="{% trans 'Yes' %}" /> {% trans "Yes" %}
+                    <img src="{{ STATIC_URL }}web_theme_media/images/icons/tick.png" alt="{% trans 'Yes' %}" /> {% trans "Yes" %}
                   </button>
                   {% if previous %}
                   <a href="#header" onclick='{% if previous %}window.location.replace("{{ previous }}");{% else %}history.go(-1);{% endif %}' class="button">
-                    <img src="{{ MEDIA_URL }}web_theme_media/images/icons/cross.png"  alt="{% trans 'No' %}"/> {% trans "No" %}
+                    <img src="{{ STATIC_URL }}web_theme_media/images/icons/cross.png"  alt="{% trans 'No' %}"/> {% trans "No" %}
                   </a>
                   {% endif %}
                 </div>
